2006-01-27  Antonio Martinez  <antonio.martinez.shotton@gmail.com>  (tiny change)

	* tramp.el (tramp-handle-call-process): All excursions must be
	saved correctly.

2006-01-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el, tramp-cache.el, tramp-ftp.el, tramp-util.el,
	* tramp-vc.el: Add code for unloading Tramp.  See comment before
	`tramp-unload-tramp' for checklist.

	* tramp.el (tramp-unload-file-name-handler-alist)
	(tramp-unload-tramp): New defuns.
	(tramp-advice-PC-expand-many-files): New defadvices.
	(tramp-save-PC-expand-many-files, tramp-setup-complete) Defuns
	removed.

	* tramp-ftp.el (tramp-ftp-enable-ange-ftp): New defun.

	* tramp-vc.el (vc-user-login-name): Wrap defadvice with a test for
	`process-file', in order to let it work for older Emacsen too.

2005-12-11  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.1.5 released.

	* tramp.el (tramp-remote-path): Beautify "/usr/xpg4/bin".  Clarify
	docstring.
	(tramp-handle-expand-file-name): Remove double slash.
	(tramp-set-remote-path): It is sufficient to check for
	`file-directory-p'.
	(tramp-find-file-exists-command): Remove unnecessary message.
	(tramp-check-ls-command, tramp-check-ls-commands)
	(tramp-find-ls-command, tramp-find-id-command): Remove functions.
	Code is moved to corresponding `tramp-get-*' functions.
	(tramp-get-*): Work in connection buffer because local
	`tramp-remote-path'. Insert code from above when necessary.
	(tramp-bug): Add `tramp-default-host', `tramp-default-user',
	`tramp-default-user-alist'.
	(tramp-append-tramp-buffers): Add local variables for all Tramp
	buffers.

2005-12-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-verbose): Document level 7.
	(tramp-send-command-and-check): Clean up tramp_exit_status from
	buffer.
	(tramp-handle-file-local-copy, tramp-send-command-and-read):
	Remove cleaning of tramp_exit_status.
	(tramp-handle-write-region): Make cksum check more robust.