@@ -1,3 +1,12 @@
+2006-01-30  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-unload-tramp): Don't try to unload tramp-util.
+
+	* tramp-smb.el (tramp-smb-wait-for-output): Wait always for the
+	prompt.  If it returns earlier (when detecting an error message),
+	the rest of the output will merge accidently with the output of
+	the next command.  Reported by M Jared Finder <jared@hpalace.com>.
+
 2006-01-27  Antonio Martinez  <antonio.martinez.shotton@gmail.com>  (tiny change)
 
 	* tramp.el (tramp-handle-call-process): All excursions must be
